examples/error/hierachical_modelling_inlineembed1/ppError/error-GCCNONE.errorOutput
Hauptgruppe.xml:48: QName attribute value defined by '[uri]localname' syntax but no ] found.
MBS.mbsim.xml:18: [ecount=1] included from here
MBS.mbsx:8: [ecount=1] included from here
